<resources>
    <string name="app_name">SoporeFoodDelivery</string>
    <string name="soporefooddelivery">SoporeFoodDelivery</string>
    <string name="enter_your_phone_number">Enter Your Number</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account?</string>
    <string name="sign_up_now">sign up now</string>
    <string name="enter_your_name">Name(Min.5 characters)</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password">Password(Min.4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Sign up</string>
    <string name="welcome_to_main_screen">Welcome To main Screen</string>
    <string name="next">Next</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">close Drawer</string>
</resources>