<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    tools:context=".SignupPage">

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textviewrounded"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:padding="20dp" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textviewrounded"
        android:backgroundTint="@color/white"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="20dp" />

    <EditText
        android:id="@+id/editText_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textviewrounded"
        android:backgroundTint="@color/white"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:padding="20dp" />

    <EditText
        android:id="@+id/editText_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_mobile"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textviewrounded"
        android:backgroundTint="@color/white"
        android:hint="@string/delivery_address"
        android:inputType="textPostalAddress"
        android:padding="20dp" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_address"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textviewrounded"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:padding="20dp" />

    <EditText
        android:id="@+id/editText_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textviewrounded"
        android:backgroundTint="@color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="20dp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_confirmPassword"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#E91E63"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />


</RelativeLayout>