<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_App_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="100dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/delivery_logo" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_App_logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/soporefooddelivery"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic" />


    <EditText
        android:id="@+id/login_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_app_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textviewrounded"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_call_24"
        android:drawablePadding="10dp"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:padding="16dp" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_mobile"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/textviewrounded"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/password_lock2"
        android:drawablePadding="10dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="16dp" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/log_in"
        android:textColor="#F44336"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInBtn"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/donNotHaveAnaAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="25dp"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_toEndOf="@id/donNotHaveAnaAccount"
        android:text="@string/sign_up_now"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>