<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/forgot_App_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="100dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/delivery_logo" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/forgot_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_App_logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/soporefooddelivery"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic" />


    <EditText
        android:id="@+id/forgot_editText_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_app_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textviewrounded"
        android:backgroundTint="@color/white"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:padding="20dp" />


    <EditText
        android:id="@+id/forgot_editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_editText_mobile"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:background="@drawable/textviewrounded"
        android:backgroundTint="@color/white"
        android:hint="@string/email_address"
        android:padding="20dp" />


    <Button
        android:id="@+id/forgot_password_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_editText_email"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#E91E63"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>